--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
-    "ioredis": "^5.6.1",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "razorpay": "^2.9.6",
