--- a/server/.env
+++ b/server/.env
@@ -7,11 +7,11 @@ MONGODB_URI=mongodb+srv://aarthi:JpIens0zDvQjtWH8@ebooks.vfhjv7l.mongodb.net/?re
 # Razorpay Configuration
 RAZORPAY_KEY=rzp_test_Xk7M6YuPJpaWZA
 RAZORPAY_SECRET_KEY=eSyCuqFcooFNwVMcWylYN9Rj
-LINKING_URL=http://localhost:3000/userHome
+LINKING_URL=https://e-books-frontend.onrender.com/userHome
 
 # Email Configuration
 GMAIL_USER=aarthi23527@gmail.com
 GMAIL_PASS=eogj ajiq ogie sbxk
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:3000,http://localhost:5173
+CORS_ORIGIN=http://localhost:3000,http://localhost:5173,https://e-books-frontend.onrender.com/userHome
