--- a/server/.env
+++ b/server/.env
@@ -14,4 +14,4 @@ GMAIL_USER=aarthi23527@gmail.com
 GMAIL_PASS=eogj ajiq ogie sbxk
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:3000,http://localhost:5173,https://e-books-frontend.onrender.com/userHome
+CORS_ORIGIN=http://localhost:3000,http://localhost:5173,https://e-books-frontend.onrender.com
