--- a/server/.env
+++ b/server/.env
@@ -2,12 +2,14 @@
 PORT=5000
 
 # MongoDB Configuration
-MONGODB_URI=mongodb+srv://aarthi:JpIens0zDvQjtWH8@ebooks.vfhjv7l.mongodb.net/?retryWrites=true&w=majority&appName=EBooks
+MONGODB_URI=mongodb+srv://mahi:Mahicommunity%40com@mahicommunitybooks.z1sq2mr.mongodb.net/?retryWrites=true&w=majority&appName=MahiCommunityBooks
 
 # Razorpay Configuration
-RAZORPAY_KEY=rzp_test_Xk7M6YuPJpaWZA
-RAZORPAY_SECRET_KEY=eSyCuqFcooFNwVMcWylYN9Rj
+RAZORPAY_KEY=rzp_live_J3ijSXeOlUPj0J
+RAZORPAY_SECRET_KEY=DElxWIYjsifG6FY1xvGI9tod
 LINKING_URL=https://mahicommunity.com/userHome
+
+# LINKING_URL=http://localhost:3000/userHome
 
 # Email Configuration
 GMAIL_USER=mahi@mahicommunity.com
