--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "razorpay": "^2.9.6",
-    "tiny-link": "^1.0.1"
+    "tiny-link": "^1.0.1",
+    "util": "^0.12.5"
   },
   "name": "server",
   "version": "1.0.0",
